2000-10-25  Darin Adler  <darin@eazel.com>

	* libgnomevfs/gnome-vfs-mime-sniff-buffer.c:
	(gnome_vfs_mime_sniff_buffer_get): More fixes to this function.
	Made it no longer do the "no op" seeks. Got rid of the problem
	where it would only read one chunk if the buffer's seek pointer
	was NULL. Make the check at the end of the function be based on
	the actual size requested, rather than on the amount of data
	we decided to read (which could be more than the request).

2000-10-25  Mathieu Lacage  <mathieu@eazel.com>

	* configure.in:
	fix LIBEFS check. add gtkdoc check.
	
	* devel-docs/gnome-vfs/gnome-vfs-decl.txt:
	* devel-docs/gnome-vfs/gnome-vfs-docs.sgml:
	avoid an obvious error when compiling.
	
	* devel-docs/gnome-vfs/tmpl/gnome-vfs-mime-info.sgml:
	* devel-docs/gnome-vfs/tmpl/gnome-vfs-mime.sgml:
	* devel-docs/gnome-vfs/tmpl/libgnome-vfs.sgml:
	regenerate templates...

2000-10-25  Darin Adler  <darin@eazel.com>

	* libgnomevfs/gnome-vfs-mime-sniff-buffer.c:
	* libgnomevfs/gnome-vfs-mime-sniff-buffer.c:
	(gnome_vfs_mime_sniff_buffer_get): Oops, got it wrong. This fixes
	another case that I missed.

2000-10-25  Darin Adler  <darin@eazel.com>

	* libgnomevfs/gnome-vfs-mime-sniff-buffer.c:
	(gnome_vfs_mime_sniff_buffer_get): Fixed error with the handling
	of a case where the file is smaller than the requested sniff
	buffer. The check was broken, and it also didn't set an error
	code to let the caller know there's insufficient data.

	* configure.in: Fixed check of gcc command-line switches to work
	properly even with -O.

2000-10-24  John Sullivan  <sullivan@eazel.com>

	* data/mime/gnome-vfs.mime: Added extension-based MIME type
	entries for Word and Excel, since we want them to play nice
	with StarOffice at least.

2000-10-24  Rebecca Schulman  <rebecka@eazel.com>
	
	Fixed a bug in the gnome vfs mime magic that we weren't
	actually seeking and reading the right chunks of files.
	Fixing this exposed a large performance problem related to